--- a/css/main.css
+++ b/css/main.css
@@ -227,3 +227,28 @@ div.search-form
 {
 	background: #80CFFF;
 }
+
+
+/* mis estilos */
+
+.navegador {
+  background-color: #f2f2f2;
+}
+
+.caja-gris {
+  background-color: #e9e9e9;
+    height: 200px;
+    margin-bottom: 10px;
+    font-size: 1em;
+    padding: 10px;
+  }
+  
+  .pie {
+    color: white;
+    text-align: center;
+    background-color: black;
+  }
+  
+  .cuerpo {
+    background-color: #f4f4f4;
+  }
