--- a/css/main.css
+++ b/css/main.css
@@ -231,9 +231,6 @@ div.search-form
 
 /* mis estilos */
 
-.navegador {
-  background-color: #f2f2f2;
-}
 
 .caja-gris {
   background-color: #e9e9e9;
@@ -241,15 +238,5 @@ div.search-form
     margin-bottom: 10px;
     font-size: 1em;
     padding: 10px;
+    border-radius: 2px;
   }
-  
-  .pie {
-    color: white;
-    text-align: center;
-    background-color: #bebebe;
-  }
-  
-  .cuerpo {
-    background-color: #f4f4f4;
-  }
- 
