master: alertas bonitas

--- a/css/main.css
+++ b/css/main.css
@@ -240,3 +240,14 @@ div.search-form
     padding: 10px;
     border-radius: 2px;
   }
+  
+  .alerta {
+    display: none;
+    position: fixed;
+    top: 40%;
+    rigth: -50%;
+    width: 80%
+    -webkit-box-shadow: 2px 4px 31px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 4px 31px -3px rgba(0,0,0,0.75);
+    box-shadow: 2px 4px 31px -3px rgba(0,0,0,0.75);
+  }
