--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,7 @@ div.search-form
 
 .caja-gris {
   background-color: #e9e9e9;
-    height: 258px;
+    min-height: 258px;
     margin-bottom: 10px;
     font-size: 1em;
     padding: 10px;
